# MiCasa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  entrypoint.sh  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tailwind.manage.config.js  tasks.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: build.yml  docker.yml  documentation.yml  release.yml
MiCasa/: asgi.py  settings.py  urls.py  wsgi.py
app/: __init__.py  config.py  settings.py
app/applications/: __init__.py  forms.py  views.py
app/applications/templates/: list_apps.html
app/home/: __init__.py  views.py
app/models/: application.py  security.py  theme.py
app/static/css/: app.css
app/templates/: layout.html
app/themes/: __init__.py  themes.json  views.py
app/themes/templates/: index.html  styles.css
applications/: admin.py  forms.py  models.py  urls.py  views.py
applications/migrations/: 0001_initial.py  0002_application_url.py  0003_alter_application_options.py  0004_application_is_pinned.py  0005_alter_application_position.py
bookmarks/: admin.py  forms.py  models.py  urls.py  views.py
bookmarks/migrations/: 0001_initial.py  0002_bookmark_position_bookmarkcategory_position.py  0003_alter_bookmark_position_and_more.py  0004_alter_bookmark_options_and_more.py  0005_alter_bookmarkcategory_position.py  0006_alter_bookmark_category.py
docs/: install.md
home/: context_processors.py  preferences.py  urls.py  views.py
home/templatetags/: current_time.py  greeting.py
home/weather/: __init__.py  mappings.json
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
migrations/versions/: 0e384ae604ed_applications.py  350b22de7d1c_flask_security.py  8382b68cadfc_.py  b88cbc4dfd6e_application_desc_and_pinning.py
static/css/: app.css  halfmoon.css  input.css  output.css
static/icons/: site.webmanifest
static/js/: app.js  manage.js  sortable-lists.js
static/src/: front.css  manage.css
templates/: layout.html  manage.html
templates/applications/: create.html  delete.html  home.html  index.html  manage.html  update.html
templates/bookmarks/: bookmarkcategory_form.html  home.html  index.html  manage.html
templates/home/: index.html  weather.html
templates/partials/: _section_header.html  favicons.html  messages.html  nav.html
templates/user/: about.html  backup.html  backup.json  base.html  index.html  language.html  login.html  logout.html  theme.html  weather.html
user/: custom_widgets.py  forms.py  preferences.py  urls.py  views.py  widgets.py
user/migrations/: 0001_initial.py
(+21 files in other folders)
