[tool.poetry]
name = "micasa"
version = "0.1.0"
description = ""
authors = ["Pierre-Yves Gillier <github@pygillier.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-environ = "^0.11.2"
django-htmx = "^1.19.0"
django-debug-toolbar = "^4.4.6"
django-bootstrap-icons = "^0.9.0"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
gunicorn = "^23.0.0"
weatherapi = "^0.0.4"
django-dynamic-preferences = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'


[tool.ruff]
line-length = 120

[tool.djlint]
profile="django"
ignore="H030,H031"
