[tool.poetry]
name = "micasa"
version = "0.5.1"
description = "Personal dashboard for elegant people."
authors = ["Pierre-Yves Gillier <github@pygillier.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-environ = "^0.12"
django-htmx = "^1.23"
django-debug-toolbar = "^5.0"
django-bootstrap-icons = "^0.9.0"
whitenoise = {extras = ["brotli"], version = "^6.9"}
gunicorn = "^23.0.0"
weatherapi = "^0.0.4"
django-dynamic-preferences = "^1.16.0"
mozilla-django-oidc = "^4.0.1"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'


[tool.ruff]
line-length = 120

[tool.djlint]
profile="django"
ignore="H030,H031"
